# ImageProcessing

./: .gitignore  CMakeLists.txt
inc/: mainwindow.h  processingmethods.h
src/: mainwindow.cxx  processingmethods.cxx
ui/: mainwindow.ui
